--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Etch A Sketch</title>
   </head>
   <body>
+    <div class="reset-page">
+      <button>Shake Etch A Sketch</button>
+    </div>
     <div class="container"></div>
     <script src="script.js" defer></script>
   </body>
